Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mon-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mon-app
  template:
    metadata:
      labels:
        app: mon-app
    spec:
      containers:
      - name: mon-app-container
        # 👇 Remplacez ":latest" par la version spécifique que vous voulez déployer
        image: moubarakyampa/mon_projet:latest
        ports:
        - containerPort: 80
